--- a/grails/blog/web-app/css/main.css
+++ b/grails/blog/web-app/css/main.css
@@ -1,267 +1,253 @@
-html * {
-    margin: 0;
-    /*padding: 0; SELECT NOT DISPLAYED CORRECTLY IN FIREFOX */
+
+div#hd {
+	background-color: black;
+	margin: auto;
+	height: 100px;
+	background: #558EAD url(../images/header_bg.gif) repeat scroll 0%;
+    margin-bottom: 12px;
 }
 
-/* GENERAL */
+#hdtitle {
+    margin-left: 10px;
+    font-size: 50px;
+    font-family: Verdana;
+    font-weight: bold;
+    color: white;
+}
 
-.spinner {
-    padding: 5px;
-    position: absolute;
-    right: 0;
+#hdtitle a:link, .blogtitle a:visited, #hdtitle a {
+
+    color: white;
+    text-decoration: none;
+
+}
+
+.tagCloud a {
+
+    color: #676767;
+    text-decoration: none;
+    font-weight: bold;
+
+}
+
+.tagCloud a:hover {
+
+    text-decoration: underline;
+    font-weight: bold;
+
+}
+
+#hdtitle a:hover {
+
+    text-decoration: underline;
+
+}
+
+
+#hdsubtitle {
+    margin-left: 10px;
+    font-size: 20px;
+    font-family: Verdana;
+    color: white;
 }
 
 body {
     background: #fff;
     color: #333;
-    font: 11px verdana, arial, helvetica, sans-serif;
+    font: verdana, arial, helvetica, sans-serif;
+    text-align: left;
+    margin: auto;
 }
 
-a:link, a:visited, a:hover {
-    color: #666;
-    font-weight: bold;
-    text-decoration: none;
-} 
+.flash {
+    padding: 1em;
+    margin-bottom: 1em;
+    border: 1px solid black;
+    background-color: pink;
+}
 
-h1 {
-    color: #006dba;
-    font-weight: normal;
-    font-size: 16px;
-    margin: .8em 0 .3em 0;
+div.niceBox {
+    background-color: #e4ecec ;
+    margin: 1em;
+    padding: 1em;
+    margin-bottom: 3em;
+}
+
+.niceBox li {
+    list-style-type: none;
+}
+
+
+div#footerText {
+    background-color: #e4ecec ;
+    text-align: center;
+    padding: 4px;
+}
+
+.approvalLink {
+    float: right;
+    margin: 3px;
+}
+
+.deleteLink {
+    float: right;
+    margin: 3px;
+}
+
+.blogentry {
+    margin-top: 1em;
+}
+
+.blogtitle {
+    padding-top: 7px;
+}
+
+.blogdate {
+    margin-bottom: 2em;
+}
+
+.blogtitle a:link, .blogtitle a:visited {
+
+    color: #6e7d8e;
+    text-decoration: none;
+    font-size: x-large;
+
+}
+
+.blogtitle a:hover {
+
+    text-decoration: underline;
+
+}
+
+.archiveMonth {
+    font-size: large;
+    margin-top: 1em;
+    margin-bottom: 5px;
+}
+
+.archiveTable {
+    width: 100%;
+    border-top: 1px dotted black;
+    border-bottom: 1px dotted black;
+}
+
+.archiveTable tr {
+    height: 2em;
+}
+
+.archiveDate {
+    width: 2em;
+}
+.archiveTags {
+    width: 10em;
+}
+.archiveComments {
+    width: 2em;
+    text-align: right;
+}
+
+.archivePaginate {
+    margin-top: 2em;
+    margin-bottom: 2em;
+    text-align: center;
+}
+/* archive breakcrumbs */
+.archivePaginate a {
+    margin-left: 3px;
+    margin-right: 3px;
+
+}
+
+p {
+    margin-top: 1em;
+    margin-bottom: 1em;
 }
 
 ul {
-    padding-left: 15px;	
+    list-style: square;
+    
 }
 
-input, select, textarea {
-    background-color: #fcfcfc;
-    border: 1px solid #ccc;
-    font: 11px verdana, arial, helvetica, sans-serif;
-    margin: 2px 0;
-    padding: 2px 4px;
-}
-select {
-   padding: 2px 2px 2px 0;
-}
-textarea {
-	width: 250px;
-	height: 150px;
-	vertical-align: top;
+li {
+    margin-left: 2em;
+    margin-bottom: 4px;
 }
 
-input:focus, select:focus, textarea:focus {
-    border: 1px solid #b2d1ff;
+.blogtitle {
+    
 }
 
-.body {
+.blogdate {
+    color: #6e7d8e;
+    font-size: small;
+}
+
+.printIcons {
+    float: right;
+}
+
+.blogTags {
+    border-bottom: 1px dotted black;
+}
+
+/* Blog comments */
+
+.blogcomments {
+    margin-top: 5px;
+    padding: 1em;
+    background-color: #e6e6e6;
+
+}
+
+.blogcomment {
+    
+}
+
+.blogcommentEven {
+    background-color: white;
+}
+
+.blogcommentOdd {
+    background-color: lightgray;
+}
+
+
+/* All that Blog Rolodex Jazz. Inspiration from http://www.wynia.org/wordpress/2005/09/05/css-date-blocks-for-blogs/ */
+
+.dateblock {
+   text-align: center;
+   width: 50px;
+   font-family: Arial;
+   border: 1px solid black;
+   background-color: #fa9b39;
+   color: white;
+   margin-right: 5px;
+}
+.day {
+    font-size: 26px;
+    position: relative;
+    top: -5px;
+}
+.month {
+    font-size: 12px;
+    margin-top: 3px;
+}
+.year {
+    font-size: 12px;
+    position: relative;
+    top: -10px;
+}
+
+
+.blogRolodex {
     float: left;
-    margin: 0 15px 10px 15px;
 }
 
-/* NAVIGATION MENU */
+/* Stuff for the tag clouds */
 
-.nav {
-    background: #fff url(../images/skin/shadow.jpg) bottom repeat-x;
-    border: 1px solid #ccc;
-    border-style: solid none solid none;	
-    margin-top: 5px;
-    padding: 7px 12px;
-}
-
-.menuButton {
-    font-size: 10px;
-    padding: 0 5px;
-}
-.menuButton a {
-    color: #333;
-    padding: 4px 6px;
-}
-.menuButton a.home {
-    background: url(../images/skin/house.png) center left no-repeat;
-    color: #333;
-    padding-left: 25px;
-}
-.menuButton a.list {
-    background: url(../images/skin/database_table.png) center left no-repeat;
-    color: #333;
-    padding-left: 25px;
-}
-.menuButton a.create {
-    background: url(../images/skin/database_add.png) center left no-repeat;
-    color: #333;
-    padding-left: 25px;
-}
-
-/* MESSAGES AND ERRORS */
-
-.message {
-    background: #f3f8fc url(../images/skin/information.png) 8px 50% no-repeat;
-    border: 1px solid #b2d1ff;
-    color: #006dba;
-    margin: 10px 0 5px 0;
-    padding: 5px 5px 5px 30px
-}
-
-div.errors {
-    background: #fff3f3;
-    border: 1px solid red;
-    color: #cc0000;
-    margin: 10px 0 5px 0;
-    padding: 5px 0 5px 0;
-}
-div.errors ul {
-    list-style: none;
-    padding: 0;	
-}
-div.errors li {
-	background: url(../images/skin/exclamation.png) 8px 0% no-repeat;
-    line-height: 16px;
-    padding-left: 30px;
-}
-
-td.errors select {
-    border: 1px solid red;
-}
-td.errors input {
-    border: 1px solid red;
-}
-
-/* TABLES */
-
-table {
-    border: 1px solid #ccc;
-    width: 100%
-}
-tr {
-    border: 0;
-}
-td, th { 
-    font: 11px verdana, arial, helvetica, sans-serif;
-    line-height: 12px;
-    padding: 5px 6px;
-    text-align: left;
-    vertical-align: top;
-}
-th {
-    background: #fff url(../images/skin/shadow.jpg);
-    color: #666;
-    font-size: 11px;
-    font-weight: bold;
-    line-height: 17px;
-    padding: 2px 6px;
-}
-th a:link, th a:visited, th a:hover {
-    color: #333;
-    display: block;
-    font-size: 10px;
-    text-decoration: none;
-    width: 100%;
-}
-th.asc a, th.desc a {
-    background-position: right;
-    background-repeat: no-repeat;
-}
-th.asc a {
-    background-image: url(../images/skin/sorted_asc.gif);
-}
-th.desc a {
-    background-image: url(../images/skin/sorted_desc.gif);
-}
-
-.odd {
-    background: #f7f7f7;
-}
-.even {
-    background: #fff;
-}
-
-/* LIST */
-
-.list table {
-    border-collapse: collapse;
-}
-.list th, .list td {
-    border-left: 1px solid #ddd;
-}
-.list th:hover, .list tr:hover {
-    background: #b2d1ff;
-}
-
-/* PAGINATION */
-
-.paginateButtons {
-    background: #fff url(../images/skin/shadow.jpg) bottom repeat-x;
-    border: 1px solid #ccc;
-    border-top: 0;
-    color: #666;
-    font-size: 10px;
-    overflow: hidden;
-    padding: 10px 3px;
-}
-.paginateButtons a {
-    background: #fff;
-    border: 1px solid #ccc;
-    border-color: #ccc #aaa #aaa #ccc;
-    color: #666;
-    margin: 0 3px;
-    padding: 2px 6px;
-}
-.paginateButtons span {
-    padding: 2px 3px;
-}
-
-/* DIALOG */
-
-.dialog table {
-    padding: 5px 0;
-}
-
-.prop {
-    padding: 5px;
-}
-.prop .name {
-    text-align: left;
-    width: 15%;
-    white-space: nowrap;
-}
-.prop .value {
-    text-align: left;
-    width: 85%;
-}
-
-/* ACTION BUTTONS */
-
-.buttons {
-    background: #fff url(../images/skin/shadow.jpg) bottom repeat-x;
-    border: 1px solid #ccc;
-    color: #666;
-    font-size: 10px;
-    margin-top: 5px;
-    overflow: hidden;
-    padding: 0;
-}
-
-.buttons input {
-    background: #fff;
-    border: 0;
-    color: #333;
-    cursor: pointer;
-    font-size: 10px;
-    font-weight: bold;
-    margin-left: 3px;
-    overflow: visible;
-    padding: 2px 6px;
-}
-.buttons input.delete {
-    background: transparent url(../images/skin/database_delete.png) 5px 50% no-repeat;
-    padding-left: 28px;
-}
-.buttons input.edit {
-    background: transparent url(../images/skin/database_edit.png) 5px 50% no-repeat;
-    padding-left: 28px;
-}
-.buttons input.save {
-    background: transparent url(../images/skin/database_save.png) 5px 50% no-repeat;
-    padding-left: 28px;
-}
+.tagCloudSize0 { font-size: xx-small; }
+.tagCloudSize1 { font-size: small;  }
+.tagCloudSize2 { font-size: medium;  }
+.tagCloudSize3 { font-size: large;  }
+.tagCloudSize4 { font-size: xx-large;  } 
